--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="payment-qr" id="wechatPay">
                     <h3>微信支付</h3>
                     <!-- 替换为你的微信收款码 -->
-                    <img src="wechat-qr.png" alt="微信收款码">
+                    <img src="606.jpg" alt="微信收款码">
                 </div>
                 
                 <div class="payment-qr" id="alipayPay">
