--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
         const products = [
             {
                 id: 1,
-                name: "无线蓝牙耳机",
-                price: 299,
-                image: "https://via.placeholder.com/300x200",
-                description: "高保真音质，主动降噪，20小时续航",
-                details: "采用最新蓝牙5.2技术，IPX5防水等级，支持无线充电"
+                name: "王坤",
+                price: 250,
+                image: "3.jpg",
+                description: "317帅哥一枚，可约，包扎",
+                details: "情感不专一：同时与多人保持暧昧或恋爱关系，通过“养鱼”“劈腿”等方式满足虚荣心或情感需求。"
             },
             {
                 id: 2,
-                name: "智能手表",
+                name: "刘佩",
                 price: 599,
-                image: "https://via.placeholder.com/300x200",
-                description: "健康监测，运动模式，GPS定位",
-                details: "1.6英寸AMOLED屏幕，血氧饱和度检测，50米防水"
+                image: "4.jpg",
+                description: "317帅哥第二枚，专一",
+                details: "绝对暖男"
             }
         ];
 
